--- a/api/tag/models/Tag.settings.json
+++ b/api/tag/models/Tag.settings.json
@@ -14,10 +14,8 @@
     "comment": ""
   },
   "attributes": {
-    "name": {
-      "type": "string",
-      "unique": true,
-      "required": true
+    "Tag": {
+      "type": "string"
     }
   }
 }
