--- a/api/service/models/Service.settings.json
+++ b/api/service/models/Service.settings.json
@@ -2,12 +2,15 @@
   "connection": "default",
   "collectionName": "disciplines",
   "info": {
-    "name": "discipline",
+    "name": "service",
     "description": "work fields"
   },
   "options": {
     "increments": true,
-    "timestamps": true,
+    "timestamps": [
+      "created_at",
+      "updated_at"
+    ],
     "comment": ""
   },
   "attributes": {
