--- a/api/step/models/Step.settings.json
+++ b/api/step/models/Step.settings.json
@@ -21,7 +21,7 @@
     "description": {
       "type": "text"
     },
-    "Image": {
+    "image": {
       "model": "file",
       "via": "related",
       "plugin": "upload",
