update page settings

--- a/api/analyticsarticle/models/Analyticsarticle.settings.json
+++ b/api/analyticsarticle/models/Analyticsarticle.settings.json
@@ -30,6 +30,10 @@
     },
     "textSvg": {
       "type": "richtext"
+    },
+    "project": {
+      "model": "project",
+      "via": "analyticsArticles"
     }
   }
 }
